# ChangeLog for dev-java/sun-jdk
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  13 Dec 2006; Vlastimil Babka <caster@gentoo.org> -sun-jdk-1.6.0.ebuild,
  -files/sun-jdk-1.6.env:
  1.6 version moved to portage tree

  13 Dec 2006; Vlastimil Babka <caster@gentoo.org> sun-jdk-1.6.0.ebuild:
  Fixed jce/doc dependencies and QA_TEXTRELS_x86.

  04 Dec 2006; Vlastimil Babka <caster@gentoo.org> -sun-jdk-1.5.0.10.ebuild,
  -files/sun-jdk-1.5.env, -sun-jdk-1.7.0.0_alpha02.ebuild,
  +sun-jdk-1.7.0.0_alpha03.ebuild:
  Bump to new 1.7 snapshot. Remove 1.5.0.10 which is now in portage tree.

  02 Dec 2006; Petteri Räty <betelgeuse@gentoo.org> ChangeLog:
  Adding sun-jdk-1.5.0.10.ebuild using pax-utils.eclass from bug #156135.
  Can't commit to main because of bugs in the eclass.

  22 Nov 2006; Vlastimil Babka <caster@gentoo.org>
  -sun-jdk-1.6.0.0_beta102.ebuild, -sun-jdk-1.6.0.0_beta103.ebuild,
  -sun-jdk-1.7.0.0_alpha01.ebuild, +sun-jdk-1.7.0.0_alpha02.ebuild:
  New 1.7 snapshot. Remove old 1.6 ebuilds.

  24 Oct 2006; Federico Fissore <federico@fsfe.org>
  +sun-jdk-1.6.0.0_beta103.ebuild:
  New snapshot bump.

  12 Oct 2006; Vlastimil Babka <caster@gentoo.org>
  -sun-jdk-1.6.0.0_beta101.ebuild, +sun-jdk-1.6.0.0_beta102.ebuild:
  New snapshot bump.

  06 Oct 2006; Vlastimil Babka <caster@gentoo.org>
  -sun-jdk-1.6.0.0_beta100.ebuild, +sun-jdk-1.6.0.0_beta101.ebuild:
  New snapshot.

  17 Sep 2006; Vlastimil Babka <caster@gentoo.org>
  -sun-jdk-1.6.0.0_beta98.ebuild, +sun-jdk-1.6.0.0_beta99.ebuild:
  New 1.6 snapshot, this time bi-weekly.

  03 Sep 2006; Vlastimil Babka <caster@matfyz.cz>
  -sun-jdk-1.6.0.0_beta97.ebuild, +sun-jdk-1.6.0.0_beta98.ebuild:
  Bump for new weekly release.
