@@ -1,17 +1,30 @@
+AUX sun-jdk-1.6.env 925 RMD160 cac1306ba6dd05dcf74fb2e536bf40bd3f03bee1 SHA1 02587c415e0dffefdf8900fad5884d2bd604056c SHA256 8fd2d12405a41b923b3c64d56b9e42a89d2479323fd78703f2b065fb0ee7ec2b
+MD5 f356c5b7e3ccb4243bac775c0286c4fb files/sun-jdk-1.6.env 925
+RMD160 cac1306ba6dd05dcf74fb2e536bf40bd3f03bee1 files/sun-jdk-1.6.env 925
+SHA256 8fd2d12405a41b923b3c64d56b9e42a89d2479323fd78703f2b065fb0ee7ec2b files/sun-jdk-1.6.env 925
 AUX sun-jdk-1.7.env 925 RMD160 f20078640a13176763381811e2050d0b9cd0ca1e SHA1 e2ef76e945eb3b4a34c4edfcf6376c58a54697b7 SHA256 95689b9bc21a9d571f556da0c6377c326bd2d24bc71f0b32f9bdc836c90cf581
 MD5 095bd3019f41594de107fab06efe56aa files/sun-jdk-1.7.env 925
 RMD160 f20078640a13176763381811e2050d0b9cd0ca1e files/sun-jdk-1.7.env 925
 SHA256 95689b9bc21a9d571f556da0c6377c326bd2d24bc71f0b32f9bdc836c90cf581 files/sun-jdk-1.7.env 925
-DIST jdk-7-ea-bin-b03-linux-amd64-30_nov_2006.bin 56270345 RMD160 dc3f1b4a8038371bbbf3d5bc711720c1fa4fce11 SHA1 7e1192fa22d31d68cc0c40ef7dec4c2bf6c6a847 SHA256 b5e3a0e23515fb328244c8db75eef41254efa340d3ffee808cdc70a8306db3f4
-DIST jdk-7-ea-bin-b03-linux-i586-30_nov_2006.bin 62614852 RMD160 93a74fbf38670c7bcdec5b31893f7e742447e723 SHA1 63fc0a4218866ba646e906fb5c4ed5371056ff71 SHA256 ba4dd9b1756d9731e7924ee915847e7544ef1853d008b7b33eadbb30dc61c344
-EBUILD sun-jdk-1.7.0.0_alpha03.ebuild 5356 RMD160 cac745edfb5fd9fdb92d90ea85d40fe752c1e476 SHA1 2ceeff202778d9d067657cd7e8e619dfdc8493ca SHA256 4ee7564c1827719456db6aae968b7c1439089297492a691f4b11b947c5af07e3
-MD5 d669fe5a934dd3a7f6aa4bd25d11248c sun-jdk-1.7.0.0_alpha03.ebuild 5356
-RMD160 cac745edfb5fd9fdb92d90ea85d40fe752c1e476 sun-jdk-1.7.0.0_alpha03.ebuild 5356
-SHA256 4ee7564c1827719456db6aae968b7c1439089297492a691f4b11b947c5af07e3 sun-jdk-1.7.0.0_alpha03.ebuild 5356
-MISC ChangeLog 1742 RMD160 b571448092de65411ca876c86808641849c8c4cd SHA1 8f2a5f8ea32325d9a8e509de1c67d3316fb06a46 SHA256 fc9abd80b262f98afa2301ab3018e79eb338c81410f966e828d939fd8c52e639
-MD5 eee62efcb8cb4da9c3ad9e9c711118b4 ChangeLog 1742
-RMD160 b571448092de65411ca876c86808641849c8c4cd ChangeLog 1742
-SHA256 fc9abd80b262f98afa2301ab3018e79eb338c81410f966e828d939fd8c52e639 ChangeLog 1742
-MD5 b529ec317bbf837f7061e7f0d66d2368 files/digest-sun-jdk-1.7.0.0_alpha03 635
-RMD160 0cffeae43e59756f5ff39ae7b3b34313335b8a76 files/digest-sun-jdk-1.7.0.0_alpha03 635
-SHA256 2ee0eaf3aeeee2e46666d615f9bedf2688ed1dab1aef411c3c32980044a3410e files/digest-sun-jdk-1.7.0.0_alpha03 635
+DIST jdk-6u1-ea-bin-b01-linux-amd64-14_dec_2006.bin 56235497 RMD160 b2f6e80c4c2762927c44873efc72eb60f583cbf8 SHA1 f96d2bd3bb745732c863ffef5c4301cea7d2d231 SHA256 d6048fb4edba295ced08d1fe115bae724c93892288ce1be09786670858b3d388
+DIST jdk-6u1-ea-bin-b01-linux-i586-14_dec_2006.bin 62656768 RMD160 e5a1cd00d55ba68458ba8fc1941665f6a7895b5e SHA1 9fe46f4a2de9f05d3bfac2ef939fa7ae2a4a02b2 SHA256 615bf12e6bb85693ce3a506938690f99d3423e5ffe98ce38e4047c9e40e9eb0a
+DIST jdk-7-ea-bin-b04-linux-amd64-14_dec_2006.bin 56271376 RMD160 b807bbf82787459636132e658a042ad77f5e2bab SHA1 cd317f1ccd6913888e20d3ba2b531318136b8e73 SHA256 104d586e5e09b96beaba99e269df67b625fc6d4fb35536123cb443fb390ebd58
+DIST jdk-7-ea-bin-b04-linux-i586-14_dec_2006.bin 62603866 RMD160 f5dcf897228e57c255fef4f1561a2ff8434435a1 SHA1 4699420702a1202c085cc1854e28df6bfe76c9af SHA256 2012f68243f29c2f5afc03c1ca45d2cfb294681920bbc0325d46a84e1752d345
+EBUILD sun-jdk-1.6.0.1_alpha01.ebuild 5324 RMD160 cde3f7ca69efea38cf7517ddda20ac8e2a662a02 SHA1 dc3329a5cc3ac33ea0c609ac9ace1b1ab7d6b2a3 SHA256 0073580b2a00fc7b37cacb3adcf3a2c3dd3da272da1887ed22d5df0579a6353c
+MD5 338b9eabd0d9b3cddc341a4ecf111b58 sun-jdk-1.6.0.1_alpha01.ebuild 5324
+RMD160 cde3f7ca69efea38cf7517ddda20ac8e2a662a02 sun-jdk-1.6.0.1_alpha01.ebuild 5324
+SHA256 0073580b2a00fc7b37cacb3adcf3a2c3dd3da272da1887ed22d5df0579a6353c sun-jdk-1.6.0.1_alpha01.ebuild 5324
+EBUILD sun-jdk-1.7.0.0_alpha04.ebuild 5356 RMD160 66bc593d85135b5fdad22e2f4013edd56fdfc65d SHA1 6bd65766dad277ec7b3454ca4b51f32cfc94c38b SHA256 949e42135d3227038633e4c3b21a47c9cecaf6e40eb83a591be3110ba905b732
+MD5 1491caf84f402e39a0dd4a3a36349437 sun-jdk-1.7.0.0_alpha04.ebuild 5356
+RMD160 66bc593d85135b5fdad22e2f4013edd56fdfc65d sun-jdk-1.7.0.0_alpha04.ebuild 5356
+SHA256 949e42135d3227038633e4c3b21a47c9cecaf6e40eb83a591be3110ba905b732 sun-jdk-1.7.0.0_alpha04.ebuild 5356
+MISC ChangeLog 1987 RMD160 03226e70fbda6a59b745f2fd2ad578a1127f413e SHA1 19171718dfcb090ac789dc447952e5712563a851 SHA256 ed5af8cfefef91d0cae976e72331a8ba658632238f3b3c8aecfd1115c0dbc564
+MD5 eaed1b23edf68924b829048e8094ff80 ChangeLog 1987
+RMD160 03226e70fbda6a59b745f2fd2ad578a1127f413e ChangeLog 1987
+SHA256 ed5af8cfefef91d0cae976e72331a8ba658632238f3b3c8aecfd1115c0dbc564 ChangeLog 1987
+MD5 4d1c5489389d7f5c7aaac0802e2bebbd files/digest-sun-jdk-1.6.0.1_alpha01 647
+RMD160 b732fa7e0a1474639745abf796646382c8f5b362 files/digest-sun-jdk-1.6.0.1_alpha01 647
+SHA256 daee7ecb491460375a744a3bb5be8f0ec88cd7b5ccebee941c9a336ab242c980 files/digest-sun-jdk-1.6.0.1_alpha01 647
+MD5 2b1530e9125c745b124e4c109a6c8dd2 files/digest-sun-jdk-1.7.0.0_alpha04 635
+RMD160 e2fdb42513cca15abf139caab8993d9dc1328ae3 files/digest-sun-jdk-1.7.0.0_alpha04 635
+SHA256 01f27e709b98034037ee733fccc2e2e888c9762cfeedc5bc9674c88f22aae5f0 files/digest-sun-jdk-1.7.0.0_alpha04 635
