@@ -1,0 +1,6 @@
+MD5 70171fb77ebfb70059f09ad49c2706ab jdk-6u1-ea-bin-b01-linux-amd64-14_dec_2006.bin 56235497
+RMD160 b2f6e80c4c2762927c44873efc72eb60f583cbf8 jdk-6u1-ea-bin-b01-linux-amd64-14_dec_2006.bin 56235497
+SHA256 d6048fb4edba295ced08d1fe115bae724c93892288ce1be09786670858b3d388 jdk-6u1-ea-bin-b01-linux-amd64-14_dec_2006.bin 56235497
+MD5 f82fe56a756b2772bdabe74248e202ab jdk-6u1-ea-bin-b01-linux-i586-14_dec_2006.bin 62656768
+RMD160 e5a1cd00d55ba68458ba8fc1941665f6a7895b5e jdk-6u1-ea-bin-b01-linux-i586-14_dec_2006.bin 62656768
+SHA256 615bf12e6bb85693ce3a506938690f99d3423e5ffe98ce38e4047c9e40e9eb0a jdk-6u1-ea-bin-b01-linux-i586-14_dec_2006.bin 62656768
