@@ -1,6 +1,0 @@
-MD5 177b3d725875bd4f9ed1c9d4d55cc009 jdk-7-ea-bin-b03-linux-amd64-30_nov_2006.bin 56270345
-RMD160 dc3f1b4a8038371bbbf3d5bc711720c1fa4fce11 jdk-7-ea-bin-b03-linux-amd64-30_nov_2006.bin 56270345
-SHA256 b5e3a0e23515fb328244c8db75eef41254efa340d3ffee808cdc70a8306db3f4 jdk-7-ea-bin-b03-linux-amd64-30_nov_2006.bin 56270345
-MD5 1d97277142b97c325e9774cb65adf5bb jdk-7-ea-bin-b03-linux-i586-30_nov_2006.bin 62614852
-RMD160 93a74fbf38670c7bcdec5b31893f7e742447e723 jdk-7-ea-bin-b03-linux-i586-30_nov_2006.bin 62614852
-SHA256 ba4dd9b1756d9731e7924ee915847e7544ef1853d008b7b33eadbb30dc61c344 jdk-7-ea-bin-b03-linux-i586-30_nov_2006.bin 62614852
