@@ -1,0 +1,6 @@
+MD5 ff4403e2c2c7be2c4c01626308b6d73a jdk-7-ea-bin-b04-linux-amd64-14_dec_2006.bin 56271376
+RMD160 b807bbf82787459636132e658a042ad77f5e2bab jdk-7-ea-bin-b04-linux-amd64-14_dec_2006.bin 56271376
+SHA256 104d586e5e09b96beaba99e269df67b625fc6d4fb35536123cb443fb390ebd58 jdk-7-ea-bin-b04-linux-amd64-14_dec_2006.bin 56271376
+MD5 288b85aaaf0c5b3cb45c37e4c9615df9 jdk-7-ea-bin-b04-linux-i586-14_dec_2006.bin 62603866
+RMD160 f5dcf897228e57c255fef4f1561a2ff8434435a1 jdk-7-ea-bin-b04-linux-i586-14_dec_2006.bin 62603866
+SHA256 2012f68243f29c2f5afc03c1ca45d2cfb294681920bbc0325d46a84e1752d345 jdk-7-ea-bin-b04-linux-i586-14_dec_2006.bin 62603866
